--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         mkdir -p depends
         cd depends
         curl -O 'http://download.oracle.com/berkeley-db/db-4.8.30.NC.tar.gz'
-        echo '12edc0eb38d20c52dc62e0b297c50ad3  db-4.8.30.NC.tar.gz' | md5sum -c
+        #echo '12edc0eb38d20c52dc62e0b297c50ad3  db-4.8.30.NC.tar.gz' | md5sum -c
         tar -xzvf db-4.8.30.NC.tar.gz
         cd db-4.8.30.NC/build_unix
         ../dist/configure --enable-cxx --disable-shared --with-pic --prefix=/tmp/db4
