--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,9 @@ jobs:
         tar -xzvf db-4.8.30.NC.tar.gz
         cd db-4.8.30.NC
 
-        # Patch atomic.h to avoid GCC builtin conflict
-        echo "diff --git a/dbinc/atomic.h b/dbinc/atomic.h
+        # ✅ 패치 내용 안전하게 cat << EOF 방식으로 처리
+        cat << 'EOF' > atomic.patch
+diff --git a/dbinc/atomic.h b/dbinc/atomic.h
 index 74b7339..0f7cc65 100644
 --- a/dbinc/atomic.h
 +++ b/dbinc/atomic.h
@@ -45,7 +46,9 @@ index 74b7339..0f7cc65 100644
 +__db_atomic_compare_exchange(db_atomic_t *atomic, atomic_value_t oldval, atomic_value_t newval)
  {
      return (__atomic_compare_exchange_n(&atomic->value, &oldval,
-         newval, 0, __ATOMIC_SEQ_CST, __ATOMIC_SEQ_CST));" > atomic.patch
+         newval, 0, __ATOMIC_SEQ_CST, __ATOMIC_SEQ_CST));
+}
+EOF
 
         patch -p1 < atomic.patch
 
